# doc-codification

./: CLAUDE.md  README.md  main.py  pyproject.toml  test_amendment.py
src/doc_codification/core/: __init__.py  amendment_parser.py  orchestrator.py  simple_pdf_processor.py
src/doc_codification/llm/: __init__.py  text_analyzer.py
src/doc_codification/models/: __init__.py  amendment.py  document_analysis.py
tests/: test_basic.py  test_orchestrator_integration.py  test_simple_pdf_processor.py
